--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@tilepieces/server",
+  "name": "@tilepieces/node-server",
   "version": "1.0.0",
   "description": "",
   "main": "server",
