--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@tilepieces/node-API": "file:../node-API",
     "busboy": "^0.3.1",
     "open": "^7.0.0"
   }
